fix and move token to body when login
