# webapi/docs/swagger.yaml
@@ -37,6 +37,15 @@ definitions:
       password:
         type: string
     type: object
+  models.LoginResponse:
+    properties:
+      accessToken:
+        type: string
+      expireToken:
+        type: string
+      login:
+        type: string
+    type: object
   models.UpdateCharacter:
     properties:
       ability:
@@ -48,15 +57,6 @@ definitions:
       maxHealth:
         type: number
       name:
-        type: string
-    type: object
-  models.User:
-    properties:
-      characters:
-        items:
-          $ref: '#/definitions/models.Character'
-        type: array
-      login:
         type: string
     type: object
 info:
@@ -187,7 +187,7 @@ paths:
         "200":
           description: logged in user
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.LoginResponse'
       summary: Login user
       tags:
       - Auth
