# webapi/models/auth.go
@@ -5,6 +5,12 @@ type Login struct {
 	Password string
 }
 
+type LoginResponse struct {
+	Login       string
+	AccessToken string
+	ExpireToken string
+}
+
 type Register struct {
 	Login    string
 	Password string
