# webapi/models/user.go
@@ -1,10 +1,5 @@
 package models
 
-type User struct {
-	Login      string
-	Characters []Character
-}
-
 type AddUser struct {
 	Login    string
 	Password string
